# ingenious_serverapi

./: .env.example  .gitignore  AUTOGEN_INTEGRATION.md  AUTOGEN_MERGE_SUMMARY.md  README.md  advanced_streaming_demo.py  autogen_demo.py  cli.py  curl_equivalent.py  curl_streaming_commands.py  data_pipeline_example.py  direct_agent_example.py  main.py  pyproject.toml  streaming_api_demo.py  streaming_demo.py  test_advanced_pipeline.py  test_autogen_integration.py  test_autogen_merge.py  test_data_pipeline.py  test_literal_pipeline.py  test_pipeline_agents.py  test_workflow.py
agents/: __init__.py  agent_factory.py  base_agent.py  calculator_agent.py  file_data_analyst.py  formatter_agent.py  sample_agents.py  summary_agent.py  text_processor_agent.py
api/: __init__.py  app.py  orchestrator.py
core/: __init__.py  config.py  logger.py
data/: employee_data.xlsx  market_report.txt  sales_data.csv
examples/: file_data_analyst_demo.py
templates/: autogen_dummy.txt  autogen_workflow_dummy.txt  calculator.txt  code_reviewer_prompt.txt  content_writer_prompt.txt  data_analyst_prompt.txt  data_analyst_with_files.txt  formatter.txt  summary_prompt.txt  text_processor.txt
tests/: conftest.py  test_config.py  test_enhanced_agents.py  test_enhanced_orchestrator.py  test_file_processing.py  test_logger.py  test_orchestrator.py
